# chatweb

./: README.md  ecosystem.config.js
.devcontainer/: devcontainer.json
backend/: keybase.py  main.py  mockchat.py  model.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
